# masterthesis

./: .gitignore  README.md  references
.github/workflows/: build_proposal.yml  build_thesis.yml
.zed/: tasks.json
implementation/: .gitignore  Cargo.toml  README.md  benchmark.csv  from_datalog.txt  hand_written.txt
implementation/.devcontainer/: devcontainer.json
implementation/cli/: Cargo.toml
implementation/cli/src/: main.rs
implementation/compute/: Cargo.toml
implementation/compute/src/: circuit.rs  context.rs  dbsp.rs  dbsp_playground.rs  env.rs  error.rs  expr.rs  function.rs  interpreter.rs  lib.rs  operator.rs  relation.rs  resolver.rs  scalar.rs  stmt.rs  test_helper.rs  type_resolver.rs  util.rs  variable.rs
implementation/compute/src/operators/: coalesce.rs  mod.rs  projection.rs  reindex.rs
implementation/compute/src/optimizer/: mod.rs  optimizer.rs
implementation/optimizer/: Cargo.toml
implementation/optimizer/src/: lib.rs
implementation/parser/: Cargo.toml
implementation/parser/benches/: key_value_stores.rs  list.rs  mvr_crdt_key_value_store.rs  parse_trace.rs  trace_provider.rs
implementation/parser/src/: analysis.rs  ast.rs  crdts.rs  datalog.rs  expr.rs  expression.rs  graph.rs  helper.rs  key_value_store_crdts.rs  lib.rs  list_crdt.rs  literal.rs  translation.rs  type_resolver.rs
notes/: datalog_grammar.md  dbsp.md  debug.txt  incremental_view_maintenance.md  query_optimization.md
proposal/: bibliography.bib  main.tex  proposal_expressing_crdts_with_datalog.tex  references.bib
thesis/: Tectonic.toml  bibliography.bib  main.tex  settings.tex
thesis/chapters/: 01_introduction.tex  02_background.tex  03_results.tex  04_discussion.tex
thesis/src/: bibliography.bib  main.tex  main.xmpdata  settings.tex
thesis/src/chapters/: 01_introduction.tex  02_background.tex  03_implementation.tex  03_results.tex  04_discussion.tex  04_evaluation.tex  05_conclusion.tex  template_examples.tex
thesis/src/data/: bench.numbers  bench_cleaned.csv  bench_hdr_cb.csv  bench_hdr_nocb.csv  bench_kv_store_hdr_cb.csv  bench_kv_store_hdr_nocb.csv  bench_kv_store_nrt_cb_base1000.csv  bench_kv_store_nrt_cb_base2000.csv  bench_kv_store_nrt_cb_base3000.csv  bench_kv_store_nrt_cb_base4000.csv  bench_kv_store_nrt_cb_base5000.csv  bench_kv_store_nrt_nocb_base1000.csv  bench_kv_store_nrt_nocb_base2000.csv  bench_kv_store_nrt_nocb_base3000.csv  bench_kv_store_nrt_nocb_base4000.csv  bench_kv_store_nrt_nocb_base5000.csv  bench_list_hdr.csv  bench_list_nrt_base10000.csv  bench_list_nrt_base20000.csv  bench_list_nrt_base30000.csv  bench_list_nrt_base40000.csv  bench_list_nrt_base50000.csv  bench_nrt.csv  bench_nrt_cb_b1000.csv  bench_nrt_cb_b2000.csv  bench_nrt_cb_b3000.csv  bench_nrt_cb_b4000.csv  bench_nrt_cb_b5000.csv  bench_nrt_nocb_b1000.csv  bench_nrt_nocb_b2000.csv  bench_nrt_nocb_b3000.csv  bench_nrt_nocb_b4000.csv  bench_nrt_nocb_b5000.csv  bench_raw.csv
thesis/src/figures/: bench_hydration_kv_store.tex  bench_kv_store_hdr.tex  bench_kv_store_nrt.tex  bench_list_hdr.tex  bench_list_nrt.tex  bench_near_real_time_kv_store.tex  causal_issue.tex  ir_transitive_closure.tex  list_crdt.tex  mvr_store_relations.tex  naive_vs_optimized_query_plan.tex  negative_query_plan.tex  precedence_graph.tex  system_architecture.tex
thesis/src/pages/: abstract.tex  acknowledgments.tex  disclaimer.tex  title.tex
utils/: latex_build.sh
