[workspace]
resolver = "2"
members = ["parser", "compute", "cli", "optimizer"]

[workspace.package]
version = "0.0.1"
authors = ["Leo Stewen"]
description = "Implementation of Masterthesis 'Expressing CRDTs using Datalog'"
homepage = "https://github.com/lstwn/masterthesis"
repository = "https://github.com/lstwn/masterthesis"

[workspace.dependencies]
anyhow = "1.0.95"
thiserror = "2.0.9"
criterion = "0.6.0"
