[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
compute = { path = "../compute" }
parser = { path = "../parser" }
optimizer = { path = "../optimizer" }

[dev-dependencies]
compute = { path = "../compute", features = ["test"] }
