[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
dbsp = "0.62.0"
rkyv = { version = "0.7.45", default-features = false, features = [
    "std",
    "size_64",
    "validation",
    "uuid",
] }
size-of = { version = "0.1.5", package = "feldera-size-of", features = [
    "hashbrown",
    "time-std",
    "xxhash-xxh3",
    "arcstr",
    "chrono",
    "ordered-float",
] }
cli-table = "0.4.9"
