[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
dbsp = "0.63.0"
rkyv = { version = "0.7.45", default-features = false, features = [
    "std",
    "size_64",
    "validation",
    "uuid",
] }
size-of = { version = "0.1.5", package = "feldera-size-of", features = [
    "hashbrown",
    "time-std",
    "xxhash-xxh3",
    "arcstr",
    "chrono",
    "ordered-float",
] }
cli-table = "0.4.9"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
