[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
compute = { path = "../compute" }
anyhow = { workspace = true }
nom = "8.0.0"

[dev-dependencies]
criterion = { workspace = true }
compute = { path = "../compute", features = ["test"] }

[[bench]]
name = "mvr_crdt_key_value_store"
# We disable the default test harness to use Criterion instead.
harness = false
