[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
compute = { path = "../compute" }
anyhow = { workspace = true }
nom = "8.0.0"

[dev-dependencies]
criterion = { workspace = true }
compute = { path = "../compute", features = ["test"] }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "key_value_stores"
# We disable the default test harness to use Criterion instead.
harness = false

[[bench]]
name = "list"
# We disable the default test harness to use Criterion instead.
harness = false
